--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,30 @@
-certifi==2024.8.30
-charset-normalizer==3.4.0
-filelock==3.16.1
-fsspec==2024.10.0
-future==1.0.0
-huggingface-hub==0.26.1
-HyperPyYAML==1.2.2
+annotated-types==0.7.0
+anyio==4.9.0
+async-timeout==4.0.3
+certifi==2025.1.31
+charset-normalizer==3.4.1
+exceptiongroup==1.2.2
+filelock==3.18.0
+fsspec==2025.3.2
+greenlet==3.2.0
+h11==0.14.0
+httpcore==1.0.8
+httpx==0.28.1
 idna==3.10
-Jinja2==3.1.4
-joblib==1.4.2
+Jinja2==3.1.6
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.23
+langchain-core==0.3.54
+langchain-text-splitters==0.3.8
+langsmith==0.3.32
+llvmlite==0.44.0
 MarkupSafe==3.0.2
+more-itertools==10.6.0
 mpmath==1.3.0
 networkx==3.4.2
-numpy==2.1.2
+numba==0.61.2
+numpy==2.2.4
 nvidia-cublas-cu12==12.4.5.8
 nvidia-cuda-cupti-cu12==12.4.127
 nvidia-cuda-nvrtc-cu12==12.4.127
@@ -21,23 +34,30 @@ nvidia-cufft-cu12==11.2.1.3
 nvidia-curand-cu12==10.3.5.147
 nvidia-cusolver-cu12==11.6.1.9
 nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
 nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
-packaging==24.1
-pytubefix==8.1.1
+ollama==0.4.8
+openai-whisper==20240930
+orjson==3.10.16
+packaging==24.2
+pydantic==2.11.3
+pydantic_core==2.33.1
+pytubefix==8.12.3
 PyYAML==6.0.2
+regex==2024.11.6
 requests==2.32.3
-ruamel.yaml==0.18.6
-ruamel.yaml.clib==0.2.12
-scipy==1.14.1
-sentencepiece==0.2.0
-setuptools==75.2.0
-speechbrain @ git+https://github.com/speechbrain/speechbrain.git@3d2eeee12081c6394c402fed72c70e251a9604f3
+requests-toolbelt==1.0.0
+sniffio==1.3.1
+SQLAlchemy==2.0.40
 sympy==1.13.1
-torch==2.5.0
-torchaudio==2.5.0
-tqdm==4.66.5
-triton==3.1.0
-typing_extensions==4.12.2
-urllib3==2.2.3
+tenacity==9.1.2
+tiktoken==0.9.0
+torch==2.6.0
+tqdm==4.67.1
+triton==3.2.0
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+urllib3==2.4.0
+zstandard==0.23.0
